* index.html: HTML fixlets.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -79,6 +79,7 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 Andrew Haley updated the gcc tree-based inliner to work for gcj.
 </td></tr>
 
+<tr><td valign="top">
 <b>July 25, 2002</b>
 </td><td>
 Kaz Kojima has implemented the necessary support in FFI and libjava
@@ -105,7 +106,7 @@ boost.
 <b>June 21, 2002</b>
 </td><td>
 The <code>java.sql</code> and <code>javax.sql</code> packages were updated
-by Bryce McKinlay to implement the JDBC 3.0 (JDK 1.4) API. </li>
+by Bryce McKinlay to implement the JDBC 3.0 (JDK 1.4) API.
 </td></tr>
 
 <tr><td valign="top">
@@ -250,8 +251,6 @@ Currently, this code is enabled for IA-64 and X86 Linux.
 </td></tr>
 
 <!-- News entries end here -->
-
-</table>
 
 </GCJNAV>
 
