--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -74,6 +74,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-pc-linux-gnu</td>
+<td>Slackware 8.0, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00993.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i386-pc-solaris2.8</td>
 <td>binutils 2.11.2</td>
 <td>Successful:
@@ -81,10 +88,10 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i386-pc-linux-gnu</td>
-<td>Slackware 8.0, glibc 2.2.5, kernel 2.4.19</td>
-<td>Successful (C, C++, Obj-C):
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00993.html">3.2</a></td>
+<td>i386-pc-sysv4.2uw2.1.3</td>
+<td>SCO Unixware 2.1.3</td>
+<td>Successful (C; with tweak):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01309.html">3.2</a></td>
 </tr>
 
 <tr>
@@ -103,6 +110,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00469.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu (k6)</td>
+<td>Debian unstable, binutils 2.12.90, glibc 2.2.5, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01317.html">3.2</a></td>
 </tr>
 
 <tr>
@@ -134,6 +148,20 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00497.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Debian unstable, binutils 2.12.90, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01317.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu (athlon)</td>
+<td>Debian 3.0, binutils 2.12.90, glibc 2.2.5, kernel 2.2.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01317.html">3.2</a></td>
 </tr>
 
 <tr>
@@ -246,6 +274,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>Debian Woody, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01307.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00729.html">3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -285,6 +323,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00907.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00480.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00622.html">3.2</a>
 </td>
 </tr>
 
