--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -8,9 +8,8 @@
 
 <h1>GCC Releases</h1>
 
-<p>Apart from providing our <a href="cvs.html">sources by means of CVS</a>
-we also make source code for our releases available for FTP download from
-our <a href="mirrors.html">mirror sites</a>.</p>
+<p>Source code for GCC releases may be downloaded from our
+<a href="mirrors.html">mirror sites</a>.</p>
 
 <p><em>Important: because these are source releases, they will be
 of little use to you if you do not already have a C compiler on your
@@ -20,6 +19,9 @@ binaries.</p>
 <p>To find pre-compiled binaries for various platforms, please
 refer to our <a href="http://gcc.gnu.org/install/binaries.html">binaries
 page</a>.</p>
+
+<p>You can also retrieve the current development sources
+<a href="cvs.html">using CVS</a>.</p>
 
 <h2><a name="timeline">Timeline</a></h2>
 
