2002-08-23  John David Anglin  <dave@hiauly1.hia.nrc.ca>
	* changes.html: Describe changes to header search.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -90,6 +90,13 @@
 	applications which place metadata or directives inside comments,
 	such as <code>lint</code>.</li>
 
+    <li>The method of constructing the list of directories to be searched
+	for header files has been revised.  If a directory named by a
+	<code>-I</code> option is a standard system include directory,
+	the option is ignored to ensure that the default search order
+	for system directories and the special treatment of system header
+	files are not defeated.</li>
+
     <li>A new function attribute,
         <code><a name="nonnull_attribute">nonnull</a></code>, has been added
 	which allows pointer arguments to functions to be specified as
