Add entries for 3.2:   i586-pc-msdosdjgpp (MS-DOS session under Win98SE)   i686-pc-linux-gnu (Mandrake 8.2, glibc 2.2.4, kernel 2.4.18)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -120,6 +120,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-msdosdjgpp</td>
+<td>MS-DOS session under Win98SE</td>
+<td>Successful (Ada, C, C++, F77, Obj-C; with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01390.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin (Athlon)</td>
 <td>Cygwin 1.3.12, Windows 2000 Pro 5.0</td>
 <td>Successful (C, C++):
@@ -175,8 +182,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00940.html">3.2</a>
-</td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00940.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01378.html">3.2</a></td>
 </tr>
 
 <tr>
