Update to describe current mainline.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -161,7 +161,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>integer constant type rules</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>integer promotion rules</em></td>
@@ -350,10 +350,10 @@ implementation of VLAs has not been checked against C99 requirements.</li>
 <li><code>const</code>-qualified compound literals could share storage
 with each other and with string literals, but currently don't.</li>
 
-<li>The constraints on where structures with flexible array members
-may be used (that they, and unions containing them (possibly
-recursively), shall not be members of structures or elements of
-arrays) are not checked.</li>
+<li>The size of structures with flexible array members is <a
+href="http://gcc.gnu.org/ml/gcc/2002-05/msg02844.html">not as
+specified in C99</a>; this may be a defect in C99 and other
+implementations behave the same way as GCC.</li>
 
 <li>The information provided by <code>static</code> in parameter array
 declarators is not used for optimization.  It might make sense to use
