Add entries for 3.2:   i586-pc-linux-gnu (Mandrake 8.1, glibc 2.2.4, kernel 2.4.8)   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.90, kernel 2.4.18)   mipsel-unknown-netbsd1.5.3 (binutils 2.13)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -120,6 +120,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.8</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01546.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i586-pc-msdosdjgpp</td>
 <td>MS-DOS session under Win98SE</td>
 <td>Successful (Ada, C, C++, F77, Obj-C; with tweaks):
@@ -194,6 +201,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.90, kernel 2.4.18</td>
+<td>Successful (Ada, C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01589.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01000.html">3.2</a>
@@ -250,6 +265,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01171.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>mipsel-unknown-netbsd1.5.3</td>
+<td>binutils 2.13</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01583.html">3.2</a></td>
 </tr>
 
 <tr>
