Add entries for 3.2:   powerpc-apple-darwin6.0   sparc-sun-solaris2.8

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -275,6 +275,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin6.0</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Obj-C; with patch):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01691.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.2.1.0</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
@@ -349,6 +356,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01171.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01700.html">3.2</a></td>
 </tr>
 
 <tr>
