--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -277,8 +277,8 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>powerpc-apple-darwin6.0</td>
 <td>&nbsp;</td>
-<td>Successful (C, C++, F77, Obj-C; with patch):
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01691.html">3.2</a></td>
+<td>Successful (with patch):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01763.html">3.2</a></td>
 </tr>
 
 <tr>
