Add entries for 3.2:   sparc-sun-solaris2.5.1   sparc-sun-solaris2.6

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -326,6 +326,20 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.5.1</td>
+<td>binutils 2.13</td>
+<td>Unsuccessful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01823.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>binutils 2.12.1</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01834.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
