--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -54,7 +54,7 @@ sites</a>.</p>
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub2/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>, thanks to ftpadm at ftp dot nctu dot edu dot tw</li>
 <li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to mirror at mirror dot ac dot uk</a></li>
-<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
+<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/gcc.gnu.org/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
 
