Document the gcc-3_4-basic-improvements and faster-compiler branches

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -162,6 +162,19 @@ you may want to check out include:</p>
   <li>cp-parser-branch.  This branch contains a new hand-written recursive
   descent parser for C++.</li>
   <li><a href="projects/tree-ssa/index.html">tree-ssa-20020619-branch</a></li>
+  <li>gcc-3_4-basic-improvements-branch: This branch is for basic,
+      straightforward improvements to the compiler, of the sort that
+      would be acceptable during <a href="develop.html#stage2">Stage 2
+      development</a>.  It is intended to be merged back to the
+      mainline at the beginning of the 3.4 development cycle.  See
+      <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01575.html">this
+      message</a> describing the checkin policy.
+  <li>faster-compiler-branch: This branch is for work aimed primarily
+      at making GCC itself run faster.  No checkin policy has yet been
+      established.  See
+      <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
+      thread</a> for discussion of possible work to be done in this
+      area.
 </ul>
 
 
