Correct XHTML validation errors

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -168,13 +168,13 @@ you may want to check out include:</p>
       development</a>.  It is intended to be merged back to the
       mainline at the beginning of the 3.4 development cycle.  See
       <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01575.html">this
-      message</a> describing the checkin policy.
+      message</a> describing the checkin policy.</li>
   <li>faster-compiler-branch: This branch is for work aimed primarily
       at making GCC itself run faster.  No checkin policy has yet been
       established.  See
       <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
       thread</a> for discussion of possible work to be done in this
-      area.
+      area.</li>
 </ul>
 
 
