Add entry for 3.2:   alphaev67-unknown-linux-gnu (Red Hat 7.1, glibc 2.2.3, kernel 2.4.3)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -47,6 +47,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev67-unknown-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00080.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux11.11</td>
 <td>&nbsp;</td>
 <td>Successful:
