--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -215,6 +215,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.9</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00094.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.90, kernel 2.4.18</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01589.html">3.2</a>
