Add entry for 3.2:   hppa64-hp-hpux11.00 (binutils 2.13)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -79,6 +79,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>hppa64-hp-hpux11.00</td>
+<td>binutils 2.13</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00116.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00088.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
