--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -211,6 +211,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 7.1, glibc 2.2.4, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00167.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00940.html">3.2</a></td>
