--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -231,7 +231,8 @@ Successful</p>
 
 <p><b>sparc-sun-solaris2.9</b><br />
 Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01553.html">2.95.2</a></p>
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01553.html">2.95.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00284.html">2.95.3</a></p>
 
 <p><b>sparc-sun-solaris2.* (64 bits)</b><br />
 Not supported</p>
