Add entries for 3.2:   i686-pc-linux-gnu (Mandrake 8.1, glibc 2.2.4, kernel 2.4.19)   sparc-sun-solaris2.6 (Solaris as and ld, GNU nm)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -225,6 +225,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00228.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.2, glibc 2.2.4, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01378.html">3.2</a></td>
@@ -375,6 +382,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>binutils 2.12.1</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01834.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>Solaris as and ld, GNU nm</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc-bugs/2002-08/msg00635.html">3.2</a></td>
 </tr>
 
 <tr>
