Add a missing </table> so the page is again visible to browsers.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -249,6 +249,7 @@ Currently, this code is enabled for IA-64 and X86 Linux.
 </td><td>
 <a href="old-news.html">Less recent GCJ news</a>
 </td></tr>
+</table>
 
 <!-- News entries end here -->
 
