--- a/htdocs/gcc-3.2/c++-abi.html
+++ b/htdocs/gcc-3.2/c++-abi.html
@@ -8,7 +8,10 @@
 
     <p>
     The main point of the GCC 3.2 release is to have a relatively
-    stable and common C++ ABI for GNU/Linux and BSD usage.
+    stable and common C++ ABI for GNU/Linux and BSD usage, following
+    the documentation at
+    <a href="http://www.codesourcery.com/cxx-abi/">http://www.codesourcery.com/cxx-abi/</a>.
+   
     Unfortunately this means that GCC 3.2 is incompatible with GCC 3.0
     and GCC 3.1 releases.</p>
 
