--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -72,6 +72,9 @@ tahoe. These are listed here just for completeness.
   OEM Documentation Library</a> offers the Alpha Architecture
   Handbook, chip hardware manuals, and info on associated core logic
   chipsets.
+   <br /><a href="http://www.tru64unix.compaq.com/docs/base_doc/DOCUMENTATION/V51A_HTML/ARH9MBTE/TITLE.HTM">Calling
+  Standard for AXP Systems</a> documents the calling conventions for
+  Digital Unix; chapters 2-4 apply to other Alpha Unix systems as well.
  </li>
 
  <li>arc
