Add link to GNAT User's Guide for Unix Platforms in /onlinedocs.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -133,6 +133,10 @@ existing release.</p>
   <li><a href="http://gcc.gnu.org/onlinedocs/gnat_rm/">GNAT Reference Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gnat_rm.ps.gz">also in
          PostScript</a>)</li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx/">GNAT User's Guide
+       for Unix Platforms</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx.ps.gz">also in
+         PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/cpp/">CPP Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/cpp.ps.gz">also in
          PostScript</a>)</li>
