--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -61,10 +61,13 @@ language</a> provides a thin interface to GCC trees with lispy syntax.
 It is meant as an intermediate language, used for example by the
 <a href="http://gont.pld.org.pl/">Gont</a> compiler.</li>
 
-<li> <a href="http://www.geocities.com/flimfrontend/">FLIM</a>, a Flexible
+<li><a href="http://www.gnuprojects.org/flim/flim.htm">FLIM</a>, a Flexible
 Language for Integer Manipulation, can be used as a guideline in developing
-a new frontend for GCC.</li> 
+a new frontend for GCC.</li>
 
+<li><a href="http://www.gnuprojects.org/spl/splf.htm">GNU Shakespeare</a>, 
+a "language with the expressiveness of BASIC and user-friendliness of assembly
+language".</li>
 </ul>
 
 </body>
