--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,6 +16,30 @@
      versions.  -->
 
 <ul>
+  <li>GCC 3.2 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2/gcc/">GCC
+         3.2 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2/gcc.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2/g77/">GCC
+         3.2 G77 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2/g77.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2/gcj/">GCC
+         3.2 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2/gcj.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2/cpp/">GCC 
+         3.2 CPP Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2/cpp.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2/gnat_rm/">GCC
+         3.2 GNAT Reference Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.2/gnat_rm.ps.gz">also
+         in PostScript</a>)</li>
+  </ul></li>
+
   <li>GCC 3.1.1 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1.1/gcc/">GCC
@@ -37,26 +61,6 @@
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1.1/gnat_rm/">GCC
          3.1.1 GNAT Reference Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.1.1/gnat_rm.ps.gz">also
-         in PostScript</a>)</li>
-  </ul></li>
-
-  <li>GCC 3.1 manuals:
-  <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcc/">GCC
-         3.1 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcc.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77/">GCC
-         3.1 G77 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcj/">GCC
-         3.1 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcj.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp/">GCC 
-         3.1 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
 
