Fix a formatting bug pointed out in mail to the gcc mailing list.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -650,7 +650,7 @@ $ ../configure [...]
       <dl>
         <dd>
           <p>Yes, GCJ 3.1 supports a CNI-based invocation interface as well as 
-	  the traditional JNI invocation API. </p>
+	  the traditional JNI invocation API.
 
           See the <a href="http://gcc.gnu.org/onlinedocs/gcj/Invocation.html">GCJ Manual</a> 
           for more details on how to use the CNI interface. </p>
