Add mips-3_4-rewrite-branch information.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -32,12 +32,12 @@ is in our repository or our <a href="#wwwdocs">web pages</a>.</p>
 from <a href="http://www.cvshome.org/">CVShome.org</a>. (Note that
 CVS versions up to 1.10.4 have "Y2K problems".)</p>
 
-<p>Assuming you have CVS installed on your machine you can check out the 
+<p>Assuming you have CVS installed on your machine you can check out the
 GCC sources with the following sequence of commands:</p>
 
 <p>Set CVSROOT in your environment to
 <code>:pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>.
-Alternately add 
+Alternately add
 <code>-d :pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>
 in the CVS commands below (place it immediately after <code>cvs</code>,
 before any other arguments).</p>
@@ -71,7 +71,7 @@ running it.</p>
 
 <p>GCC's build system (in particular Make) uses file timestamps to
 determine if a generated file needs to be updated by running a particular
-build tool.  Because of this, GCC's build system may believe that 
+build tool.  Because of this, GCC's build system may believe that
 a generated file needs regenerating even though its source has not
 changed, and require a particular build tool to rebuild that generated
 file.  If the appropriate build tool is installed on your system, then
@@ -82,9 +82,9 @@ the source, you can avoid installing these build tools by running
 <p>There has been some discussion of removing these generated files
 from GCC's CVS source tree (there is no discussion of removing them
 from the released source tarballs).  If that happens then
-building GCC from the CVS source tree would require installing 
+building GCC from the CVS source tree would require installing
 the above mentioned build tools.  Installing these build tools is not
-particularly difficult, but can be time consuming especially if you 
+particularly difficult, but can be time consuming especially if you
 only occasionally install GCC on a particular system.</p>
 
 <p>The build tools that GCC uses are all available from the GNU
@@ -175,6 +175,10 @@ you may want to check out include:</p>
       <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
       thread</a> for discussion of possible work to be done in this
       area.</li>
+  <li>mips-3_4-rewrite-branch: This branch is for largish rewrites to the
+      mips backend.  This has a long term goal of no macro instructions and
+      updating the port to the current infrastructure.  Send patches to
+      Eric Christopher <<a href="mailto:echristo@redhat.com">echristo@redhat.com</a>> and CC: <<a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>> for inclusion.</li>
 </ul>
 
 
