--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -127,6 +127,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-freebsd4.6.2</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00605.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i486-pc-linux-gnu</td>
 <td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful (C, C++, F77, Obj-C):
@@ -275,6 +282,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.10</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00623.html">3.2</a></td>
 </tr>
 
 <tr>
