--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -30,6 +30,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alpha-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00361.html">3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>alphaev56-unknown-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
 <td>Successful (C, C++, Obj-C):
@@ -288,7 +296,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.10</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00623.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00623.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00488.html">3.2</a>
+</td>
 </tr>
 
 <tr>
@@ -485,6 +496,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>Debian 3.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01098.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>sparcv9-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00570.html">3.2</a>
+</td>
 </tr>
 
 <tr>
