Add entry for 3.2:   i686-pc-linux-gnu (Slackware 8.1, glibc 2.2.5, kernel 2.4.18)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -284,6 +284,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 8.1, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00781.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5</td>
 <td>Successful (C, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00900.html">3.2</a>
