--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -25,12 +25,16 @@ maintained by <a href="mailto:dnovillo@redhat.com">Diego Novillo
 &lt;dnovillo@redhat.com&gt;</a>.  Approval from the usual maintainers will be
 needed when submitting patches from the branch onto the mainline.</p>
 
-<p>Current contributors to this project include:
+<p>Current contributors to this project include 
 <a href="mailto:dberlin@dberlin.org">Daniel Berlin</a>,
+<a href="mailto:s.bosscher@student.tudelft.nl">Steven Bosscher</a>,
 <a href="mailto:fche@redhat.com">Frank Eigler</a>,
 <a href="mailto:bje@redhat.com">Ben Elliston</a>,
+<a href="mailto:rth@redhat.com">Richard Henderson</a>,
+<a href="mailto:graydon@redhat.com">Graydon Hoare</a>,
 <a href="mailto:aldyh@redhat.com">Aldy Hernandez</a>,
 <a href="mailto:aj@suse.de">Andreas Jaeger</a>,
+<a href="mailto:law@redhat.com">Jeff Law</a>,
 <a href="mailto:jason@redhat.com">Jason Merrill</a>,
 <a href="mailto:dnovillo@redhat.com">Diego Novillo</a>,
 <a href="mailto:s.pop@laposte.net">Sebastian Pop</a> and
