--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -20,12 +20,10 @@ cvs rtag -b -r gcc-3_1-branchpoint gcc-3_1-branch gcc
 
 <li>Update <code>cvs.html</code> web page to list the new branch tags.</li>
 
-<li>Update all <code>[vV]ersion.c</code> files and
-<code>gcc/ada/gnatvsn.ads</code> on the branch, to say
+<li>Update the file <code>gcc/version.c</code> on the branch, to say
 &quot;prerelease&quot; instead of &quot;experimental&quot;.</li>
 
-<li>Update all <code>[vV]ersion.c</code> files and
-<code>gcc/ada/gnatvsn.ads</code> on the mainline, to use
+<li>Update the file <code>gcc/version.c</code> on the mainline, to use
 the next major release number (e.g., 3.2 instead of 3.1).</li>
 
 <li>Update <code>doc/include/gcc-common.texi</code> on the mainline to 
