Add entry for 3.2:   sparc-sun-solaris2.5.1 (SunOS 5.5.1, binutils 2.12.1)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -424,6 +424,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.5.1</td>
+<td>SunOS 5.5.1, binutils 2.12.1</td>
+<td>Successful (Ada, C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00941.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.6</td>
 <td>binutils 2.12.1</td>
 <td>Successful (C, C++):
