--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>September 29, 2002</b>
+</td><td>
+Anthony Green merged the java.lang.reflect.Proxy implementation in from 
+GNU Classpath.
+</td></tr>
+
+<tr><td valign="top">
 <b>August 16, 2002</b>
 </td><td>
 Andrew Haley updated the gcc tree-based inliner to work for gcj.
@@ -82,14 +89,14 @@ Andrew Haley updated the gcc tree-based inliner to work for gcj.
 <tr><td valign="top">
 <b>July 25, 2002</b>
 </td><td>
-Kaz Kojima has implemented the necessary support in FFI and libjava
+Kaz Kojima has implemented the necessary support in libffi and libjava
 to get libgcj running on SH-3/4.
 </td></tr>
 
 <tr><td valign="top">
 <b>July 19, 2002</b>
 </td><td>
-Bo Thorsen, SuSE Labs, has implemented the necessary support in FFI,
+Bo Thorsen, SuSE Labs, has implemented the necessary support in libffi,
 boehm-gc and libjava to get libgcj running on x86-64. This is a big
 step towards getting libgcj fully supported on x86-64.
 </td></tr>
