* index.html: Add s390 news item.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -76,6 +76,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <tr><td valign="top">
 <b>September 29, 2002</b>
 </td><td>
+Ulrich Weigand has implemented the necessary support in libffi to get
+libgcj running on the s390x.
+</td></tr>
+
+<tr><td valign="top">
+<b>September 29, 2002</b>
+</td><td>
 Anthony Green merged the java.lang.reflect.Proxy implementation in from 
 GNU Classpath.
 </td></tr>
