Mention change in -I/-isystem conflict handling

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -11,11 +11,26 @@
 <body>
 <h1>GCC 3.2 Changes, New Features, and Fixes</h1>
 
-<h2>Relase Notes</h2>
+<!-- Changes for later point releases should be added at the top. -->
+
+<h2>Additional changes in GCC 3.2.1</h2>
+
+<h3>C/ObjC/C++</h3>
+
+ <ul>
+    <li>The method of constructing the list of directories to be searched
+	for header files has been revised.  If a directory named by a
+	<code>-I</code> option is a standard system include directory,
+	the option is ignored to ensure that the default search order
+	for system directories and the special treatment of system header
+	files are not defeated.</li>
+ </ul>
+
+<h2>Bug Fixes</h2>
 
 <p>See <a
 href="http://gcc.gnu.org/ml/gcc/2002-08/msg00405.html">this message</a> for 
-a list of bugs fixed in this released.</p>
+a list of bugs fixed in this release.</p>
 
 <h2>Caveats</h2>
 
